@@ -3244,6 +3244,7 @@ sub runReadsToGenome
     my $ont_flag = ($configuration->{"fastq_source"} =~ /nanopore/)? 1 : 0;
     my $variant_call = (defined $configuration->{r2g_variant_call})? (($configuration->{r2g_variant_call})? 1 : 0) : 1;
     my $variant_call_ploidy =  (defined $configuration->{r2g_variant_call_ploidy})? $configuration->{r2g_variant_call_ploidy} : "haploid";
+    my $correct_bed_file;
     &make_dir($outputDir);
     symlink("$outputDir", "$outDir/ReferenceBasedAnalysis/readsMappingToRef");
     if ($noColorLog)
@@ -3289,12 +3290,14 @@ sub runReadsToGenome
     $parameters .= " -min_alt_bases $configuration->{r2g_consensus_min_cov} " if ($configuration->{r2g_consensus_min_cov}); 
     $parameters .= " -max_clip $configuration->{r2g_max_clip} " if ($configuration->{r2g_max_clip});
     if ( $configuration->{r2g_align_trim_bed_file} and &is_bed6_plus($configuration->{r2g_align_trim_bed_file}) ){
+	$correct_bed_file = "$outputDir/".basename($configuration->{r2g_align_trim_bed_file});
+	&correct_bed_ref($configuration->{r2g_align_trim_bed_file}, $correct_bed_file);
 	my $alignTrim_parameters = $parameters;
         $alignTrim_parameters .= " -p \'$pairFile\'" if ($pairFile);
         $alignTrim_parameters .= " -u $unpairFile" if ( -s $unpairFile);
 	$alignTrim_parameters=~ s/-u /-long / if $ont_flag and $configuration->{r2g_aligner} =~ /minimap/;
 	my $mapping_command = "perl $RealBin/scripts/runReadsToGenome.pl -d $outputDir/AlignTrimMapping $alignTrim_parameters";
-    	($pairFile, $unpairFile, my $AlignTrim_ref)=&getAlignTrimReads($mapping_command,$referenceFile_r, $ref_headers, $log, $outputDir);
+    	($pairFile, $unpairFile, my $AlignTrim_ref)=&getAlignTrimReads($mapping_command,$referenceFile_r, $ref_headers, $log, $outputDir,$correct_bed_file);
     }
 	    
     $parameters .= " -ref $referenceFiles";
@@ -3310,11 +3313,11 @@ sub runReadsToGenome
     }
     if ($configuration->{r2g_align_trim_bed_file}){
         # ampilcon coverage plot
-	my ($bed_prefix,$bed_dir,$bed_suffix) = fileparse($configuration->{r2g_align_trim_bed_file},qw(.bed .bedpe));
-        my $bed_file_flag = (-e "$bed_dir/$bed_prefix.bedpe")? "--bedpe $bed_dir/$bed_prefix.bedpe":"--bed $configuration->{r2g_align_trim_bed_file}";
+	my $bed_file_flag = ($correct_bed_file =~ /bedpe/ )? "--bedpe $correct_bed_file":"--bed $correct_bed_file";
         my @cov_files = glob("$outputDir/AlignTrimMapping/*coverage");
         foreach my $cov_f (@cov_files){
-               $command = "$RealBin/scripts/amplicon_coverage.py --outdir $outputDir --cov $cov_f $bed_file_flag";
+	       my $refID = ($cov_f =~ /readsToRef_(\S+).coverage/) ? "--refID $1": "";
+               $command = "$RealBin/scripts/amplicon_coverage.py --outdir $outputDir --cov $cov_f $refID $bed_file_flag";
                &executeCommand($command);
         }
 
@@ -3383,16 +3386,18 @@ sub getAlignTrimReads{
 	my $ref_headers = shift;
 	my $log = shift;
 	my $outputDir = shift;
+	my $bed_file = shift;
 	my $pairFile;
 	my $unpairFile;
 	my $ont_flag = ($configuration->{"fastq_source"} =~ /nanopore/)? 1 : 0;
 	my $AlignTrim_ref = @$ref_r[0];
+	if ($bed_file =~ /artic_ncov|SC2_200324|swift_primer_schemes_v2/){
 	if ($configuration->{r2g_align_trim_bed_file} =~ /artic_ncov|SC2_200324/){
 		if (my ($NC_044512_ref) = grep $_ =~ /NC_045512|MN908947/, @$ref_r) {
 			$AlignTrim_ref = $NC_044512_ref;
 		}
 	}else{
-		open (my $fh, "<", $configuration->{r2g_align_trim_bed_file}) or die "Cannot open Bed file\n";
+		open (my $fh, "<", $bed_file) or die "Cannot open Bed file\n";
 		my $ref_id;
 		while(<$fh>){
 			next if /^#/;
@@ -3405,7 +3410,7 @@ sub getAlignTrimReads{
 			$AlignTrim_ref = $ref_r->[$align_trim_ref_index];
 		} 
 	}
-	$cmd .= " -align_trim_bed_file $configuration->{r2g_align_trim_bed_file} -ref $AlignTrim_ref -no_snp -no_plot";
+	$cmd .= " -align_trim_bed_file $bed_file -ref $AlignTrim_ref -no_snp -no_plot";
 	$cmd .= " -align_trim_strand " if ! $ont_flag;
 	&lprint ("  ## Align Trimmed Ref: $AlignTrim_ref \n");
 	&lprint ("  ## Get Align Trimmed Reads \n");
@@ -3966,6 +3971,25 @@ sub runIdbaAssembly
     &printRunTime($time);
     &touchFile("$outputDir/runIdbaAssembly.finished");
     return ($contig_file, $contig_for_annotation);
+}
+
+sub correct_bed_ref{
+    my $bed = shift;
+    my $output_bed = shift;
+    open (my $fh, "<", $bed);
+    open (my $ofh , ">", $output_bed);
+    while (<$fh>){
+        chomp;
+       if ($_ =~ /^#/){
+            print $ofh $_,"\n";
+       }else{
+           my @array = split/\t/,$_;
+           $array[0] =~ s/\W/_/g;
+           print $ofh join("\t",@array),"\n";
+       }
+    }
+    close $fh;
+    close $ofh;
 }
 
 sub correct_fasta_header {
@@ -4729,6 +4753,7 @@ sub writeJBrowseInfo
     unlink "$outputDir/writeJBrowseInfo.finished";
     
     my $project_name=basename($abs_outDir);
+    my $correct_bed_file = "$outDir/ReadsBasedAnalysis/readsMappingToRef/".basename($configuration->{r2g_align_trim_bed_file}) if ($configuration->{r2g_align_trim_bed_file});
     my $cmd="$RealBin/scripts/edge2jbrowse_converter.pl ";
     $cmd .= "--bam-file-depth $configuration->{JBrowse_bam_min_depth} " if ($configuration->{JBrowse_bam_min_depth});
     $cmd .= "--bam-file-maq 42 " if ($configuration->{r2g_aligner} =~ /bowtie/);
@@ -4740,7 +4765,7 @@ sub writeJBrowseInfo
     $cmd .= "--in-ref-gff3 '$gff3File' " if ($gff3File);
     $cmd .= "--in-orf-ar-gff3 '$ARGenesGFF' " if ( -e "$ARGenesGFF");
     $cmd .= "--in-orf-vf-gff3 '$VFGenesGFF' " if ( -e "$VFGenesGFF");
-    $cmd .= "--in-primer2ref-bed '$configuration->{r2g_align_trim_bed_file}' " if ($configuration->{r2g_align_trim_bed_file});
+    $cmd .= "--in-primer2ref-bed '$correct_bed_file' " if ($configuration->{r2g_align_trim_bed_file});
     $cmd .= "--threads $numCPU ";
     $cmd .= "--proj_outdir '$abs_outDir' 2>\&1 1>$log";
 
