@@ -2,6 +2,7 @@
 EDGE 2.4.1
 * Update diamond from 0.9 to 2.0.5
 * Update reads extraction from Centrifuge, Kraken2, and diamond
+* Update align_trim and amplicov to deal with multi segment virus
 
 EDGE GUI 2.4.1
 * Extract mapped Diamond reads 
